OAuth configured, controllers updated

--- a/build-server-backend/BuildServer/appsettings.json
+++ b/build-server-backend/BuildServer/appsettings.json
@@ -8,8 +8,8 @@
     "JwtEmailEncryption": "YOUR JWT EMAIL ENCRYPTION"
   },
   "MongoDatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "LifeDb"
+    "ConnectionString": "mongodb://admin:J3uOdPmmKsI9jIq0@cluster0-shard-00-00.ggeli.mongodb.net:27017,cluster0-shard-00-01.ggeli.mongodb.net:27017,cluster0-shard-00-02.ggeli.mongodb.net:27017/main?ssl=true&replicaSet=atlas-rqm8lp-shard-0&authSource=admin&retryWrites=true&w=majority",
+    "DatabaseName": "Main"
   },
   "Logging": {
     "LogLevel": {
