--- a/build-server-front/package.json
+++ b/build-server-front/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "antd": "^4.9.2",
+    "axios": "^0.21.0",
     "craco-less": "^1.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
