Create Project Form, Projects Page

--- a/build-server-backend/BuildServer/appsettings.json
+++ b/build-server-backend/BuildServer/appsettings.json
@@ -5,10 +5,11 @@
     "GoogleClientSecret": "48zh-bSk3ukf9goHRoDHu5Um",
     "SpotifyClientId": "626a574974ec4763b0c8d9a327ecbd5a",
     "SpotifyClientSecret": "8e066363c6c641b3a2e695ff4a2af3e0",
-    "JwtEmailEncryption": "YOUR JWT EMAIL ENCRYPTION"
+    "JwtEmailEncryption": "YOUR JWT EMAIL ENCRYPTION",
+    "MongoDatabaseName": "Main",
+    "MongoConnectionString": "mongodb://admin:J3uOdPmmKsI9jIq0@cluster0-shard-00-00.ggeli.mongodb.net:27017,cluster0-shard-00-01.ggeli.mongodb.net:27017,cluster0-shard-00-02.ggeli.mongodb.net:27017/main?ssl=true&replicaSet=atlas-rqm8lp-shard-0&authSource=admin&retryWrites=true&w=majority"
   },
   "MongoDatabaseSettings": {
-    "ConnectionString": "mongodb://admin:J3uOdPmmKsI9jIq0@cluster0-shard-00-00.ggeli.mongodb.net:27017,cluster0-shard-00-01.ggeli.mongodb.net:27017,cluster0-shard-00-02.ggeli.mongodb.net:27017/main?ssl=true&replicaSet=atlas-rqm8lp-shard-0&authSource=admin&retryWrites=true&w=majority",
     "DatabaseName": "Main"
   },
   "Logging": {
